minikube/springboot-k8s-mysql/k8s/ingress-service.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    #nginx.ingress.kubernetes.io/use-regex: 'true'
    #nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: ayoub.172.17.0.3.xip.io
      http:
        paths:
          - path: /
            backend:
              serviceName: frontend
              servicePort: 80
          - path: /api
            backend:
              serviceName: springboot-k8s-mysql
              servicePort: 8080
    # This section is only required if TLS is to be enabled for the Ingress
#    tls:
#        - hosts:
#            - www.example.com
#          secretName: example-tls

#----
#  apiVersion: v1
#  kind: Secret
#  metadata:
#    name: example-tls
#    namespace: foo
#  data:
#    tls.crt: <base64 encoded cert>
#    tls.key: <base64 encoded key>
#  type: kubernetes.io/tls
